2007-03-26  Janis Johnson  <janis187@us.ibm.com>

	* gcc.dg/dfp/decfloat-constants.c: Check that __STDC_WANT_DEC_FP__
	is defined, not that it is 1.
	* gcc.dg/dfp/convert-dfp.c: Ditto.
	* gcc.dg/dfp/convert-int-saturate.c: Ditto.

2007-03-08  Janis Johnson  <janis187@us.ibm.com>

	* gcc.dg/dfp/signbit-1.c
	* gcc.dg/dfp/signbit-2.c

2007-01-30  Janis Johnson  <janis187@us.ibm.com>

	Backport from mainline:
	* gcc.dg/dfp/dfp-except.h: New file.
	* gcc.dg/dfp/fe-check.h: New file.
	* gcc.dg/dfp/fe-binop.c: New test.
	* gcc.dg/dfp/fe-convert-1.c: New test.
	* gcc.dg/dfp/fe-convert-2.c: New test.
	* gcc.dg/dfp/fe-convert-3.c: New test.

	* gcc.dg/dfp/dec-eval-method.c: Replace decfloat.h with float.h.
	* gcc.dg/dfp/decfloat-constants.c: Ditto.
	* gcc.dg/dfp/convert-dfp.c: Ditto.
	* gcc.dg/dfp/convert-int-saturate.c: Ditto.

2007-01-28  Andrew Pinski  <pinskia@gmail.com>

	PR C++/28988
	* g++.dg/expr/dtor4.C: New test.

2007-01-27  Steven G. Kargl  <kargl@gcc.gnu.org>

	PR fortran/30278
	* gfortran.dg/backslash_3.f: New test.

2007-01-24  Roger Sayle  <roger@eyesopen.com>
	    Brooks Moses  <brooks.moses@codesourcery.com>
	    Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	* gfortran.dg/intrinsic_sign_1.f90: New test case.
	* gfortran.dg/intrinsic_sign_2.f90: Likewise.

2007-01-23  Andrew Pinski  <pinskia@gmail.com>

	PR objc/27438
	* objc.dg/const-str-12.m: New test.

2007-01-21 Andrew Pinski  <pinskia@gmail.com>

	PR objc/30479
	* objc.dg/pch: New directory.
	* objc.dg/pch/pch.exp: New file.
	* objc.dg/pch/interface-1.m: New test.
	* objc.dg/pch/interface-1.hs: New include file.
	* lib/objc.exp (objc_target_compile): Add
	"-x objective-c-header" in front of the sources if this is
	a precompiled header being compiled.

2007-01-21  Eric Botcazou  <ebotcazou@libertysurf.fr>

	* gcc.c-torture/compile/20070121.c: New test.

2007-01-15  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	PR testsuite/12325
	* gcc.dg/torture/builtin-attr-1.c: Handle warnings from